5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1753_3090.log
== SUBMITION (2019-05-16 19:13:59) 
-- CODE:
x=int(input("digite o numero de passos da largatixa: "))
c=0
while(x==0):
	x=int(input())
	if
-- EXECUTION TIME:
0.303412
-- ERROR:
  File "/home/codebench/codes/1753/3090/main.py", line 5
    if
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:19:09) 
-- CODE:
x=int(input("digite o numero de passos da largatixa: "))
c=0
d=0
while(x==0):
	d=d+x
	if(d>0):
		print(d)
		print("Acima")
	elif(d<0):
		print(d)
		print("Abaixo")
	elif(d==0):
		print(d)
		print("Inicial")
	x=int(input("digite o numero de passos que a largatixa deu: "))
-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:20:23) 
-- CODE:
x=int(input("digite o numero de passos da largatixa: "))
c=0
d=0
while(x==0):
	x=int(input("digite o numero de passos da largatixa: "))
	d=d+x
	if(d>0):
		print(d)
		print("Acima")
	elif(d<0):
		print(d)
		print("Abaixo")
	elif(d==0):
		print(d)
		print("Inicial")
-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:20:55) 
-- CODE:
x=int(input("digite o numero de passos da largatixa: "))
c=0
d=0
while(x!=0):
	x=int(input("digite o numero de passos da largatixa: "))
	d=d+x
	if(d>0):
		print(d)
		print("Acima")
	elif(d<0):
		print(d)
		print("Abaixo")
	elif(d==0):
		print(d)
		print("Inicial")
-- OUTPUT:
1
Acima
2
Acima
3
Acima
4
Acima
5
Acima
6
Acima
7
Acima
8
Acima
18
Acima
18
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:21:27) 
-- CODE:
x=int(input("digite o numero de passos da largatixa: "))
c=0
d=0
while(x!=0):
	x=int(input("digite o numero de passos da largatixa: "))
	d=d+x
if(d>0):
	print(d)
	print("Acima")
elif(d<0):
	print(d)
	print("Abaixo")
elif(d==0):
	print(d)
	print("Inicial")
-- OUTPUT:
18
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:22:30) 
-- CODE:
x=int(input("digite o numero de passos da largatixa: "))
c=0
d=x
while(x!=0):
	x=int(input("digite o numero de passos da largatixa: "))
	d=d+x
if(d>0):
	print(d)
	print("Acima")
elif(d<0):
	print(d)
	print("Abaixo")
elif(d==0):
	print(d)
	print("Inicial")
-- OUTPUT:
19
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:22:53) 
-- CODE:
x=int(input("digite o numero de passos da largatixa: "))
c=0
d=x
while(x!=0):
	x=int(input("digite o numero de passos da largatixa: "))
	d=d+x
if(d>0):
	print(d)
	print("Acima")
elif(d<0):
	print(d)
	print("Abaixo")
elif(d==0):
	print(d)
	print("Inicial")
-- EXECUTION TIME:
0.244397
-- TEST CASE 1:
---- input:
1
1
1
1
1
1
1
1
1
10
0
---- correct output:
19
Acima
---- user output:
19
Acima
-- TEST CASE 2:
---- input:
-1
-3
-5
-7
-9
0
---- correct output:
-25
Abaixo
---- user output:
-25
Abaixo
-- TEST CASE 3:
---- input:
30
20
-10
10
-20
-30
0
---- correct output:
0
Inicial
---- user output:
0
Inicial
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
